[tool.poetry]
name = "collabry-landing"
version = "0.1.0"
description = ""
authors = ["'YehorI' <skylainer99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
facet = "^0.9.1"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.21"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
